--- a/pom.xml
+++ b/pom.xml
@@ -82,14 +82,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
 				<version>4.9.10</version>
 				<configuration>
 					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
 				</configuration>
-			</plugin>
+			</plugin -->
 		</plugins>
 	</build>
 
